Fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,7 +245,7 @@ nav a:hover {
 
 /* About section */
 #about-section {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     background-color: rgba(57, 82, 115, .8);
 }
@@ -314,7 +314,7 @@ nav a:hover {
 
 /* Class time section */
 #class-time-section {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     clear: both;
 
@@ -452,7 +452,7 @@ nav a:hover {
 /* Case-studies page */
 
 #case-section {
-    width: 100vw;
+    width: 100%;
     overflow: auto;
     clear: both;
 }
@@ -536,7 +536,7 @@ nav a:hover {
 
 /* Contact section styling */
 #contact-section {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     clear: both;
 }
